Implement v2 with consideration for distance
